--- a/package.json
+++ b/package.json
@@ -7,12 +7,10 @@
     "test": "tests"
   },
   "scripts": {
-    "prepublish": "npm run-script build",
-    "build": "node ./tools/build.js",
     "test": "jest"
   },
   "files": [
-    "params.json",
+    "params.js",
     "index.js",
     "*.d.ts"
   ],
@@ -27,8 +25,6 @@
   },
   "homepage": "https://github.com/likelylogic/clean-utm#readme",
   "devDependencies": {
-    "csv-parser": "^3.0.0",
-    "jest": "^27.1.0",
-    "tracking-query-params-registry": "git://github.com/davestewart/tracking-query-params-registry.git"
+    "jest": "^27.1.0"
   }
 }
